[gd_scene load_steps=64 format=2]

[ext_resource path="res://scripts/PinguWall.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00021.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00024.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00023.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00022.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00019.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00020.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00028.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00003.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00004.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00000.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00001.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00002.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00005.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00007.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00009.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00006.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00008.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00010.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00011.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00017.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00015.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00012.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00013.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00014.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00016.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00018.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00030.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00029.png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00025.png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00026.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/pinguWall/idle/Render Muro Idel_00027.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00005.png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00009.png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00006.png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00007.png" type="Texture" id=36]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00008.png" type="Texture" id=37]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00010.png" type="Texture" id=38]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00002.png" type="Texture" id=39]
[ext_resource path="res://assets/sprites/pinguWall/walk/Render Muro Walk_00060.png" type="Texture" id=40]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00002.png" type="Texture" id=41]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00004.png" type="Texture" id=42]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00005.png" type="Texture" id=43]
[ext_resource path="res://assets/sprites/pinguWall/walk/Render Muro Walk_00058.png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00000.png" type="Texture" id=45]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00008.png" type="Texture" id=46]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00010.png" type="Texture" id=47]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00007.png" type="Texture" id=48]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00000.png" type="Texture" id=49]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00009.png" type="Texture" id=50]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00004.png" type="Texture" id=51]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00001.png" type="Texture" id=52]
[ext_resource path="res://assets/sprites/pinguWall/walk/Render Muro Walk_00062.png" type="Texture" id=53]
[ext_resource path="res://assets/sprites/pinguWall/walk/Render Muro Walk_00064.png" type="Texture" id=54]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00006.png" type="Texture" id=55]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00003.png" type="Texture" id=56]
[ext_resource path="res://assets/sprites/pinguWall/hitR/Render Muro Hit B_00003.png" type="Texture" id=57]
[ext_resource path="res://assets/sprites/pinguWall/walk/Render Muro Walk_00059.png" type="Texture" id=58]
[ext_resource path="res://assets/sprites/pinguWall/walk/Render Muro Walk_00061.png" type="Texture" id=59]
[ext_resource path="res://assets/sprites/pinguWall/walk/Render Muro Walk_00063.png" type="Texture" id=60]
[ext_resource path="res://assets/sprites/pinguWall/hitL/Render Muro Hit A_00001.png" type="Texture" id=61]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 8 ), ExtResource( 29 ), ExtResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 61 ), ExtResource( 39 ), ExtResource( 56 ), ExtResource( 51 ), ExtResource( 43 ), ExtResource( 55 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 50 ), ExtResource( 47 ) ],
"loop": false,
"name": "hitL",
"speed": 24.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 58 ), ExtResource( 40 ), ExtResource( 59 ), ExtResource( 53 ), ExtResource( 60 ), ExtResource( 54 ) ],
"loop": false,
"name": "jump",
"speed": 24.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 52 ), ExtResource( 41 ), ExtResource( 57 ), ExtResource( 42 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 38 ) ],
"loop": false,
"name": "hitR",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 192.5, 48 )

[node name="PinguWallL" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "hitL"
frame = 10
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
animation = "idle"
frame = 24
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 11 )
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_PinguWallL_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
